Start adding deploy

--- a/templates/python/client.py.jinja
+++ b/templates/python/client.py.jinja
@@ -162,4 +162,4 @@ class AuthenticatedClient:
 {{ attributes() }}
 
 {{ builders("AuthenticatedClient") }}
-{{ httpx_stuff("AuthenticatedClient", "self._headers[self.auth_header_name] = f\"{self.prefix} {self.token}\" if self.prefix else self.token") }}
+{{ httpx_stuff("AuthenticatedClient") }}
