--- a/templates/python/client.py.jinja
+++ b/templates/python/client.py.jinja
@@ -3,6 +3,7 @@ from typing import Any, Union, Optional
 
 from attrs import define, field, evolve
 import httpx
+import os
 
 from .credentials import Credentials
 
@@ -40,8 +41,13 @@ class Client:
 
     """
 {% macro attributes() %}
+    # Determine the base URL based on the environment
+    default_base_url = "https://api.beamlit.com/v0"
+    if os.getenv("BL_ENV") == "dev":
+        default_base_url = "https://api.beamlit.dev/v0"
+
     raise_on_unexpected_status: bool = field(default=True, kw_only=True)
-    _base_url: str = field(alias="base_url", default="https://api.beamlit.dev/v0")
+    _base_url: str = field(alias="base_url", default=default_base_url)
     _cookies: dict[str, str] = field(factory=dict, kw_only=True, alias="cookies")
     _headers: dict[str, str] = field(factory=dict, kw_only=True, alias="headers")
     _provider: httpx.Auth = field(default=None, alias="provider")
