Fix url to use settings in clients

--- a/templates/python/client.py.jinja
+++ b/templates/python/client.py.jinja
@@ -3,7 +3,6 @@ from typing import Any, Union, Optional
 
 from attrs import define, field, evolve
 import httpx
-import os
 
 from .credentials import Credentials
 
@@ -41,13 +40,8 @@ class Client:
 
     """
 {% macro attributes() %}
-    # Determine the base URL based on the environment
-    default_base_url = "https://api.beamlit.com/v0"
-    if os.getenv("BL_ENV") == "dev":
-        default_base_url = "https://api.beamlit.dev/v0"
-
     raise_on_unexpected_status: bool = field(default=True, kw_only=True)
-    _base_url: str = field(alias="base_url", default=default_base_url)
+    _base_url: str = field(alias="base_url", default="")
     _cookies: dict[str, str] = field(factory=dict, kw_only=True, alias="cookies")
     _headers: dict[str, str] = field(factory=dict, kw_only=True, alias="headers")
     _provider: httpx.Auth = field(default=None, alias="provider")
@@ -60,6 +54,12 @@ class Client:
 
 {% endmacro %}{{ attributes() }}
 {% macro builders(self) %}
+    def __post_init__(self):
+        from .common.settings import get_settings
+
+        settings = get_settings()
+        self._base_url = settings.base_url
+
     def with_headers(self, headers: dict[str, str]) -> "{{ self }}":
         """Get a new client matching this one with additional headers"""
         if self._client is not None:
